html files changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
    </head>
    <body>
-    
+    <p>Lorem, ipsum dolor.</p>
+    <p>Assumenda, fugit soluta?</p>
+    <p>Facere, dolor optio!</p>
+    <p>Tempora, eius nulla!</p>
+    <p>Quis, obcaecati illo.</p>
    </body>
    </html>
